--- a/app/src/main/res/layout/activity_touchpad.xml
+++ b/app/src/main/res/layout/activity_touchpad.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@layout/touchpad_background"
+             android:background="@drawable/touchpad"
              tools:context=".TouchpadActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
