--- a/app/src/main/res/layout/touchpad_background.xml
+++ b/app/src/main/res/layout/touchpad_background.xml
@@ -2,6 +2,6 @@
 <bitmap
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:src="@drawable/touchpad"
-        android:tileMode="repeat"
+        android:tileMode="clamp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
